--- a/.pylintrc
+++ b/.pylintrc
@@ -319,7 +319,7 @@ variable-naming-style=snake_case
 
 # Regular expression matching correct variable names. Overrides variable-
 # naming-style.
-#variable-rgx=
+variable-rgx=^(_?)[a-zA-Z][a-z0-9]*((_[a-z0-9]+)*)?$
 
 
 [FORMAT]
