--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,6 @@
 [nosetests]
 exe=True
+with-doctest=1
 with-coverage=1
 cover-package=nthcommunity
-tests=test/
+tests=nthcommunity/nthcommunity.py,test/
