--- a/.pylintrc
+++ b/.pylintrc
@@ -205,7 +205,7 @@ argument-naming-style=snake_case
 
 # Regular expression matching correct argument names. Overrides argument-
 # naming-style.
-#argument-rgx=
+argument-rgx=^(_?)[a-zA-Z][a-z0-9]*((_[a-z0-9]+)*)?(_?)$
 
 # Naming style matching correct attribute names.
 attr-naming-style=snake_case
