Test using pytest; update README, package files, and GitHub Actions workflow.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,2 @@
-[nosetests]
-exe=True
-with-doctest=1
-with-coverage=1
-cover-package=nthcommunity
-tests=nthcommunity/nthcommunity.py,test/
+[tool:pytest]
+addopts = --doctest-modules --ignore=docs --cov=nthcommunity --cov-report term-missing
